# MLGEO_2026_Methane_Seeps

docs/: MSDataCollectorV1  MSDataToCSV.py  README.md  pyproject.toml  writeup.md
notebooks/: methane_concentration_2017.ipynb  time_series_cnn.ipynb
