[project]
name = "mlgeo-2026-hydrothermal-vents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "jupyterlab",
    "xarray",
    "netCDF4",
    "bs4>=0.0.2",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
    "datetime>=6.0",
]
